--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "laravel/envoy",
+    "name": "laravel/envoy-DingTalk",
     "description": "Elegant SSH tasks for PHP.",
-    "keywords": ["ssh", "laravel"],
+    "keywords": ["ssh", "laravel","DingTalk"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Taylor Otwell",
-            "email": "taylorotwell@gmail.com"
+            "name": "dupeng",
+            "email": "277578870@qq.com"
         }
     ],
     "autoload": {
