--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laravel/envoy-DingTalk",
-    "description": "Elegant SSH tasks for PHP.",
+    "name": "dupengShenyang/envoy",
+    "description": "laravel/envoy 包括dingtalk",
     "keywords": ["ssh", "laravel","DingTalk"],
     "license": "MIT",
     "authors": [
