--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/envoyForDingTalk",
+    "name": "dupengshenyang/envoy",
     "description": "laravel/envoy 包括dingtalk",
     "keywords": ["ssh", "laravel", "DingTalk"],
     "license": "MIT",
